--- a/about-us.html
+++ b/about-us.html
@@ -95,7 +95,7 @@
 	</section>
 	<!-- About Section end -->
 
-	<!-- Review Section end -->
+	<!-- Review Section 
 	<section class="review-section spad">
 		<div class="container">
 			<div class="text-center text-white mb-5 pb-2">
@@ -157,7 +157,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- Review Section end -->
+	 Review Section end -->
 	
 	<!-- Authorities Section end -->
 	<section class="authorities-section spad">
