--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>LOANS2GO | Loans HTML Template</title>
+	<title>SPROUT | Contact Us | Loans | Credit</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="loans HTML Template">
 	<meta name="keywords" content="loans, html">
@@ -39,21 +39,22 @@
 	<!-- Header Section -->
 	<header class="header-section">
 		<a href="index.html" class="site-logo">
-			<img src="img/logo.png" alt="">
+			<!--<img src="img/logo.png" alt="">-->
+			SPR<span class="red">O</span>UT
 		</a>
 		<nav class="header-nav">
 			<ul class="main-menu">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about-us.html">About Us</a></li>
-				<li><a href="#">Pages</a>
+				<li><a href="index.html" >Home</a></li>
+				<li><a href="about-us.html" class="active">About Us</a></li>
+				<!--<li><a href="#">Pages</a>
 					<ul class="sub-menu">
 						<li><a href="about-us.html">About Us</a></li>
 						<li><a href="loans.html">Loans</a></li>
 						<li><a href="elements.html">elements</a></li>
 					</ul>
 				</li>
-				<li><a href="news.html">News</a></li>
-				<li><a href="contact.html" class="active">Contact</a></li>
+				<li><a href="news.html">News</a></li>-->
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<div class="header-right">
 				<a href="#" class="hr-btn"><i class="flaticon-029-telephone-1"></i>Call us now! </a>
@@ -82,11 +83,12 @@
 				<div class="col-lg-4">
 					<div class="contact-text">
 						<h2>Get in touch</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tem por incididunt ut labore et dolore mag na aliqua.  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hime-naeos. Suspendisse potenti. </p>
+						<p>A service that goes wherever you go. Our VISA Debit Card allows you to withdraw funds from your checking account without having to write a check. You can purchase groceries, gas, or anything else where VISA is accepted. The debit card also has all the functions of an ATM Card. Our card is the checking-withdrawing-depositing-and transferring-funds card all in one. Stop by the bank and our friendly staff will get you setup with a debit card, today! </p>
 						<ul>
-							<li><i class="flaticon-032-placeholder"></i>1525  Loans Lane, Los Angeles, CA</li>
+							<li><i class="flaticon-032-placeholder"></i>720 Main Street
+								PO Box 307 Strasburg, ND 58573-0307</li>
 							<li><i class="flaticon-029-telephone-1"></i>+1 (603)535-4592</li>
-							<li><i class="flaticon-025-arroba"></i>hello@youremail.com</li>
+							<li><i class="flaticon-025-arroba"></i>hello@sproutbg.com</li>
 							<li><i class="flaticon-038-wall-clock"></i>Everyday: 06:00 -22:00</li>
 						</ul>
 						<div class="social-links">
@@ -124,26 +126,11 @@
 	</section>
 	<!-- Contact Section end -->
 
-	<!-- Score Section end -->
-	<section class="score-section text-white set-bg" data-setbg="img/score-bg.jpg">
-		<div class="container">
-			<div class="row">
-				<div class="col-xl-6 col-lg-8">
-					<h2>Calculate my Score</h2>
-					<h4>Check your credit reports as often as you want, it won't affect your scores.</h4>
-					<a href="#" class="site-btn sb-big">show my score</a>
-				</div>
-			</div>
-			<img src="img/hand.png" alt="" class="hand-img">
-		</div>
-	</section>
-	<!-- Score Section end -->
-
 	<!-- Footer Section -->
 	<footer class="footer-section">
 		<div class="container">
 			<a href="index.html" class="footer-logo">
-				<img src="img/logo.png" alt="">
+				SPR<span class="red">O</span>UT
 			</a>
 			<div class="row">
 				<div class="col-lg-3 col-sm-6">
@@ -177,7 +164,7 @@
 						<h2>Legal</h2>
 						<ul>
 							<li><a href="#">Privacy policy</a></li>
-							<li><a href="#">Loans2go principles</a></li>
+							<li><a href="#">sproutbg principles</a></li>
 							<li><a href="#">Website terms</a></li>
 							<li><a href="#">Cookie policy</a></li>
 							<li><a href="#">Conflicts policy</a></li>
@@ -197,9 +184,8 @@
 					</div>
 				</div>
 			</div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tem por incididunt ut labore et dolore mag na aliqua.  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse potenti. Ut gravida mattis magna, non varius lorem sodales nec. In libero orci, ornare non nisl.</p>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <span style="display: none;">| This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 		</div>
 	</footer>
