--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 		<nav class="header-nav">
 			<ul class="main-menu">
 				<li><a href="index.html" >Home</a></li>
-				<li><a href="about-us.html" class="active">About Us</a></li>
+				<li><a href="about-us.html" >About Us</a></li>
 				<!--<li><a href="#">Pages</a>
 					<ul class="sub-menu">
 						<li><a href="about-us.html">About Us</a></li>
@@ -54,7 +54,7 @@
 					</ul>
 				</li>
 				<li><a href="news.html">News</a></li>-->
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="contact.html" class="active">Contact</a></li>
 			</ul>
 			<div class="header-right">
 				<a href="#" class="hr-btn"><i class="flaticon-029-telephone-1"></i>Call us now! </a>
