--- a/elements.html
+++ b/elements.html
@@ -48,7 +48,7 @@
 				<li><a href="#">Pages</a>
 					<ul class="sub-menu">
 						<li><a href="about-us.html">About Us</a></li>
-						<li><a href="loans.html">Loans</a></li>
+						<li><a href="dashboard.html">Loans</a></li>
 						<li><a href="elements.html">elements</a></li>
 					</ul>
 				</li>
