--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>SPROUT | About Us | Loans | Credit</title>
+	<title>PRIME CREST | About Us | Loans | Credit</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="loans HTML Template">
 	<meta name="keywords" content="loans, html">
@@ -40,7 +40,7 @@
 	<header class="header-section">
 		<a href="index.html" class="site-logo">
 			<!--<img src="img/logo.png" alt="">-->
-			SPR<span class="red">O</span>UT
+			PRIME<span class="red">C</span>REST
 		</a>
 		<nav class="header-nav">
 			<ul class="main-menu">
@@ -192,7 +192,7 @@
 	<footer class="footer-section">
 		<div class="container">
 			<a href="index.html" class="footer-logo">
-				SPR<span class="red">O</span>UT
+				PRIME<span class="red">C</span>REST
 			</a>
 			<div class="row">
 				<div class="col-lg-3 col-sm-6">
