--- a/dashboard.html
+++ b/dashboard.html
@@ -2,10 +2,10 @@
 <html lang="zxx">
 
 <head>
-	<title>SPROUT | Loans | Credit</title>
+	<title>PRIME CREST | Loans | Credit</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="SPROUT | Loans | Credit">
-	<meta name="keywords" content="SPROUT | Loans | Credit">
+	<meta name="description" content="PRIME CREST | Loans | Credit">
+	<meta name="keywords" content="PRIME CREST | Loans | Credit">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Favicon -->
@@ -65,7 +65,7 @@
 	<header class="header-section">
 		<a href="index.html" class="site-logo">
 			<!--<img src="img/logo.png" alt="">-->
-			SPR<span class="red">O</span>UT
+			PRIME<span class="red">C</span>REST
 		</a>
 		<nav class="header-nav">
 			<ul class="main-menu">
@@ -202,7 +202,7 @@
 	<footer class="footer-section">
 		<div class="container">
 			<a href="index.html" class="footer-logo">
-				SPR<span class="red">O</span>UT
+				PRIME<span class="red">C</span>REST
 			</a>
 			<div class="row">
 				<div class="col-lg-3 col-sm-6">
