--- a/dashboard.html
+++ b/dashboard.html
@@ -236,7 +236,7 @@
 						<h2>Legal</h2>
 						<ul>
 							<li><a href="#">Privacy policy</a></li>
-							<li><a href="#">sproutbg principles</a></li>
+							<li><a href="#">prime crest principles</a></li>
 							<li><a href="#">Website terms</a></li>
 							<li><a href="#">Cookie policy</a></li>
 							<li><a href="#">Conflicts policy</a></li>
