--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 						<h5>Monday to Thursday (8am to 8pm), and Friday (8am to 5pm).</h5>
 						<ul>
 							<li>+34 56873 2246</li>
-							<li>contact@sproutbg.com</li>
+							<li style="color:black">contact@westernprimecrest.com</li>
 						</ul>
 					</div>
 				</div>
@@ -678,7 +678,7 @@
 						<h2>Legal</h2>
 						<ul>
 							<li><a href="#">Privacy policy</a></li>
-							<li><a href="#">sproutbg principles</a></li>
+							<li><a href="#">prime crest principles</a></li>
 							<li><a href="#">Website terms</a></li>
 							<li><a href="#">Cookie policy</a></li>
 							<li><a href="#">Conflicts policy</a></li>
