--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
 							<li><i class="flaticon-032-placeholder"></i>720 Main Street
 								PO Box 307 Strasburg, ND 58573-0307</li>
 							<li><i class="flaticon-029-telephone-1"></i>+1 (603)535-4592</li>
-							<li><i class="flaticon-025-arroba"></i>hello@sproutbg.com</li>
+							<li><i class="flaticon-025-arroba"></i>hello@westernprimecrest.com</li>
 							<li><i class="flaticon-038-wall-clock"></i>Everyday: 06:00 -22:00</li>
 						</ul>
 						<div class="social-links">
@@ -164,7 +164,7 @@
 						<h2>Legal</h2>
 						<ul>
 							<li><a href="#">Privacy policy</a></li>
-							<li><a href="#">sproutbg principles</a></li>
+							<li><a href="#">prime crest principles</a></li>
 							<li><a href="#">Website terms</a></li>
 							<li><a href="#">Cookie policy</a></li>
 							<li><a href="#">Conflicts policy</a></li>
