--- a/dashboard.html
+++ b/dashboard.html
@@ -2,10 +2,10 @@
 <html lang="zxx">
 
 <head>
-	<title>SPROUT | Loans | Credit</title>
+	<title>PRIME CREST | Loans | Credit</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="SPROUT | Loans | Credit">
-	<meta name="keywords" content="SPROUT | Loans | Credit">
+	<meta name="description" content="PRIME CREST | Loans | Credit">
+	<meta name="keywords" content="PRIME CREST | Loans | Credit">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Favicon -->
@@ -21,7 +21,6 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" href="css/owl.carousel.min.css" />
 	<link rel="stylesheet" href="css/flaticon.css" />
-	<link rel="stylesheet" href="css/jquery-ui.min.css" />
 	<link rel="stylesheet" href="css/slicknav.min.css" />
 
 	<!-- Main Stylesheets -->
@@ -34,23 +33,7 @@
 	<![endif]-->
 
 </head>
-<style>
-	#myProgress {
-	  width: 100%;
-	  background-color: #ddd;
-	  border-radius: 10px;
-	}
-	
-	#myBar {
-	  width: 1%;
-	  height: 30px;
-	  background-color: #4CAF50;
-	  border-radius: 10px;
-	  text-align: center; /* To center it horizontally (if you want) */
-  line-height: 30px; /* To center it vertically */
-  color: white;
-	}
-	</style>
+
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder">
@@ -60,12 +43,16 @@
 		class="alert alert-success myhide">
 
 	</div>
+	<div id="error-message" style="position: fixed; top:50px; width:80%; right:10%;z-index: 10000;text-align: center;"
+		class="alert alert-warning myhide">
+
+	</div>
 
 	<!-- Header Section -->
 	<header class="header-section">
 		<a href="index.html" class="site-logo">
 			<!--<img src="img/logo.png" alt="">-->
-			SPR<span class="red">O</span>UT
+			PRIME<span class="red">C</span>REST
 		</a>
 		<nav class="header-nav">
 			<ul class="main-menu">
@@ -201,10 +188,11 @@
 	<!-- Score Section end -->
 
 	<!-- Footer Section -->
+	<!-- Footer Section -->
 	<footer class="footer-section">
 		<div class="container">
 			<a href="index.html" class="footer-logo">
-				SPR<span class="red">O</span>UT
+				PRIME<span class="red">C</span>REST
 			</a>
 			<div class="row">
 				<div class="col-lg-3 col-sm-6">
@@ -238,7 +226,7 @@
 						<h2>Legal</h2>
 						<ul>
 							<li><a href="#">Privacy policy</a></li>
-							<li><a href="#">sproutbg principles</a></li>
+							<li><a href="#">prime crest principles</a></li>
 							<li><a href="#">Website terms</a></li>
 							<li><a href="#">Cookie policy</a></li>
 							<li><a href="#">Conflicts policy</a></li>
@@ -258,18 +246,13 @@
 					</div>
 				</div>
 			</div>
-			<div class="copyright">
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-				Copyright &copy;
-				<script>document.write(new Date().getFullYear());</script> All rights reserved <span
-					style="display: none;">| This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i>
-					by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-			</div>
+			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <span style="display: none;">| This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 		</div>
 	</footer>
 	<!-- Footer Section end -->
-
+	
 	<!--====== Javascripts & Jquery ======-->
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
@@ -344,6 +327,5 @@
 	</script>
 	<script src="js/main.js"></script>
 
-</body>
-
+	</body>
 </html>
